--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -47,8 +47,10 @@
 /* ================= CONNECT WITH ME ================= */
 
 .socials {
-  margin-top: 30px;
-}
+display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 24px;}
 
 .socials h4 {
   font-size: 12px;
@@ -60,7 +62,8 @@
 
 .social-icons {
   display: flex;
-  gap: 14px;
+  gap: 16px;
+  justify-content: center;
 }
 
 .social-icons a {
@@ -220,4 +223,13 @@ section {
 }
 .hero-left h2 {
   margin-bottom: 24px;   /* 👈 space AFTER Java Full Stack Developer */
+}
+
+
+
+@media (max-width: 768px) {
+  .hero-right img {
+    width: 220px;
+    margin-top: 20px;
+  }
 }
